internal/kgateway/agentgatewaysyncer/testdata/inputs/http-routing/bar-httproute.yaml
#$ Used in:
#$ - site-src/guides/http-routing.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: agentgateway-example
  hostnames:
  - "bar.example.com"
  rules:
  - matches:
    - headers:
      - type: Exact
        name: env
        value: canary
    backendRefs:
    - name: bar-svc-canary
      port: 80
  - backendRefs:
    - name: bar-svc
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc-canary
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
